AC_INIT(clutter-box2d/clutter-box2dmm-config.h.in)

#########################################################################
#  Version and initialization
#########################################################################
CLUTTER_BOX2DMM_MAJOR_VERSION=0
CLUTTER_BOX2DMM_MINOR_VERSION=7
CLUTTER_BOX2DMM_MICRO_VERSION=2

#
# +1 : ? : +1  == new interface that does not break old one
# +1 : ? : 0   == new interface that breaks old one
#  ? : ? : 0   == no new interfaces, but breaks apps
#  ? :+1 : ?   == just some internal changes, nothing breaks but might work
#                 better
# CURRENT : REVISION : AGE
CLUTTER_BOX2DMM_SO_VERSION=1:0:0

CLUTTER_BOX2DMM_VERSION=$CLUTTER_BOX2DMM_MAJOR_VERSION.$CLUTTER_BOX2DMM_MINOR_VERSION.$CLUTTER_BOX2DMM_MICRO_VERSION
CLUTTER_BOX2DMM_RELEASE=$CLUTTER_BOX2DMM_MAJOR_VERSION.$CLUTTER_BOX2DMM_MINOR_VERSION
AC_DEFINE_UNQUOTED([CLUTTER_BOX2DMM_MAJOR_VERSION], $CLUTTER_BOX2DMM_MAJOR_VERSION, major version)
AC_DEFINE_UNQUOTED([CLUTTER_BOX2DMM_MINOR_VERSION], $CLUTTER_BOX2DMM_MINOR_VERSION, minor version)
AC_DEFINE_UNQUOTED([CLUTTER_BOX2DMM_MICRO_VERSION], $CLUTTER_BOX2DMM_MICRO_VERSION, micro version)
AC_DEFINE_UNQUOTED([CLUTTERMM_VERSION], "$CLUTTER_BOX2DMM_VERSION", clutter-box2dmm version string)
AC_SUBST(CLUTTER_BOX2DMM_VERSION)
AC_SUBST(CLUTTER_BOX2DMM_RELEASE)
AC_SUBST(CLUTTER_BOX2DMM_SO_VERSION)

AC_CONFIG_AUX_DIR(scripts)

dnl For automake.
VERSION=$CLUTTER_BOX2DMM_VERSION
PACKAGE=clutter-box2dmm

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Specify a configuration file (no autoheader)
AM_CONFIG_HEADER(clutter-box2d/clutter-box2dmm-config.h)
AM_MAINTAINER_MODE
AL_ACLOCAL_INCLUDE(scripts)


#########################################################################
#  Configure arguments
#########################################################################

#########################################################################
#  Environment Checks
#########################################################################
AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_CANONICAL_HOST
AM_DISABLE_STATIC
AM_PROG_LIBTOOL

AL_PROG_GNU_M4(AC_MSG_ERROR([dnl
SUN m4 does not work for building cluttermm.
Please install GNU m4.]))

AL_PROG_GNU_MAKE(AC_MSG_ERROR([dnl
SUN make does not work for building cluttermm.
Please install GNU make.]))

AL_PROG_PERL(AC_MSG_ERROR([Perl is required to build cluttermm.]))

AC_CHECK_PROGS(PERL, perl5 perl)

#########################################################################
#  Dependancy checks
#########################################################################

PKG_CHECK_MODULES(CLUTTER_BOX2DMM,
                  [cluttermm-0.8
                   clutter-box2d-0.8])


# the API version of the library.  Libraries and pkg-config files will have this
# value appended to them, e.g. libclutter-0.6.so
API_VER=[0.8]
AC_SUBST(API_VER)

GMM_PROCDIR=`pkg-config --variable=gmmprocdir glibmm-2.4`
AC_SUBST(GMM_PROCDIR)
GMM_PROC=$GMM_PROCDIR/gmmproc
AC_SUBST(GMM_PROC)

#########################################################################
#  C++ checks
#########################################################################
AC_PROG_CXX
AC_LANG_CPLUSPLUS


# HACK:  Assign a dummy in order to prevent execution of autoheader by the
# maintainer-mode rules.  That would fail since we aren't using autoheader.
AUTOHEADER=':'


AC_OUTPUT([
  Makefile

  clutter-box2d/Makefile
  clutter-box2d/clutter-box2dmm-$API_VER.pc:clutter-box2d/clutter-box2dmm.pc.in
  clutter-box2d/src/Makefile
  clutter-box2d/clutter-box2dmm/Makefile
  clutter-box2d/clutter-box2dmm/private/Makefile

  tools/Makefile
    tools/extra_defs_gen/Makefile
    tools/m4/Makefile

  scripts/Makefile

  docs/Makefile
  docs/reference/Makefile
    docs/reference/Doxyfile

  demo/Makefile
  examples/Makefile
])
:
