## Copyright (c) 2001
## The cluttermm development team.

sublib_name	= clutter-box2dmm
#nested namespaces separated with spaces
sublib_namespace = Clutter Box2D
sublib_parentdir = clutter-box2dmm
files_defs	= clutter-box2d.defs \
			  clutter-box2d_methods.defs \
			  clutter-box2d_signals.defs \
			  clutter-box2d_enums.defs \
			  clutter-box2d_vfuncs.defs \
			  clutter-box2d_docs.xml \
			  clutter-box2d_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

